# tree-sitter-nbcl

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  test.nbcl  tree-sitter.json
.github/: FUNDING.yml
bindings/c/: tree-sitter-nbcl.pc.in
bindings/c/tree_sitter/: tree-sitter-nbcl.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_nbcl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterNbclTests/: TreeSitterNbclTests.swift
queries/: folds.scm  highlights.scm  indents.scm
src/: grammar.json  node-types.json  parser.c
