[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-nbcl"
description = "Tree sitter for Node Based Configuration Language (NBCL)"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "nbcl"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Byson94", email = "byson94wastaken@gmail.com" }]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/nbcl-lang/tree-sitter-nbcl"
Funding = "https://ko-fi.com/byson94"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
